@@ -14,6 +14,7 @@ Cobbler CHANGELOG
 - (BUGF) ensure that directories exist when installing a template file
 - (BUGF) fix for typo in network config snippet
 - (BUGF) fix for func integration script (should overwrite config, not append)
+- (BUGF) append nameservers and gateway, if set, for buildiso 
 
 - Fri Jan 09 2009 - 1.4.1
 - (BUGF) Cobbler check looks for right httpd on SUSE
